<resources>
    <string name="app_name">Tarot Nexus</string>
    <string name="deal_cards">Deal Cards</string>
    <string name="face_down"> </string>
    <string name="enter_question">Ask question.</string>
    <string name="ask_question">Continue</string>
    <string name="card_back">card_back.jpg</string>
    <string name="ask_another_question">Ask Another Question</string>
    <string name="click_on_a_card">Click on a card to learn about that card.\nOr continue to your answer.</string>
    <string name="after_reading_info">Click on a card to learn about that card.\nOr ask the cards another question.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_example_com">email@example.com</string>
    <string name="please_login_to_continue">Please Login or\nRegister to continue</string>
    <string name="login_button">Login</string>
    <string name="new_button">Register</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="out_of_coins">You are out of coins. You will need to purchase more coins for more readings.</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="purchaseCoinText">Every response costs one coin. If you run out, you will need to purchase more coins to continue using the application.\n</string>
    <string name="concentrate">Enter a question you would like the cards to answer. Clear you mind, concentrate on the question, then press the Deal button.</string>
    <string name="ask_a_question">Please ask a question before dealing the cards.</string>
    <string name="rate_app">Rate App!</string>
    <string name="purchase_button">%s - %s</string>
    <string name="continue_">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="horoscope_enter_name">Enter your name and select your birthday to get a personalized horoscope.</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string name="facebook_app_id">3754172238240478</string>
    <string name="facebook_client_token">66a4f957944ad13ce09ec8c447876a7b</string>




</resources>