<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceVariant"
    tools:context=".TarotQuestionFragment">

    <ImageButton
        android:id="@+id/cardThreeView"
        android:layout_width="125dp"
        android:layout_height="217dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/face_down"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_three_text_view" />

    <ImageButton
        android:id="@+id/cardTwoView"
        android:layout_width="125dp"
        android:layout_height="217dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/face_down"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/cardThreeView"
        app:layout_constraintStart_toEndOf="@+id/cardOneView"
        app:layout_constraintTop_toBottomOf="@+id/cardTwoTextView" />

    <ImageButton
        android:id="@+id/cardOneView"
        android:layout_width="125dp"
        android:layout_height="217dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/face_down"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardOneTextView" />

    <Button
        android:id="@+id/dealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:focusableInTouchMode="false"
        android:text="@string/deal_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTwoView" />

    <EditText
        android:id="@+id/QuestionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/enter_question"
        android:inputType="text|textMultiLine|textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardTwoView" />

    <TextView
        android:id="@+id/cardOneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/face_down"
        app:layout_constraintEnd_toEndOf="@+id/cardOneView"
        app:layout_constraintStart_toStartOf="@+id/cardOneView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardTwoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/face_down"
        app:layout_constraintEnd_toEndOf="@+id/cardTwoView"
        app:layout_constraintStart_toStartOf="@+id/cardTwoView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/card_three_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/face_down"
        app:layout_constraintEnd_toEndOf="@+id/cardThreeView"
        app:layout_constraintStart_toStartOf="@+id/cardThreeView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:breakStrategy="simple"
        android:clickable="false"
        android:editable="false"
        android:enabled="false"
        android:text="@string/click_on_a_card"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardOneView" />

    <TextView
        android:id="@+id/coinsTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Coins: 0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>