<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/questionbackground"
    tools:context=".ThreeQuestionFragment">



    <TextView
        android:id="@+id/cardOneTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:padding="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/face_down"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/cardOneView"
        app:layout_constraintStart_toStartOf="@+id/cardOneView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Card" />

    <TextView
        android:id="@+id/cardTwoTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:padding="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/face_down"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/cardTwoView"
        app:layout_constraintStart_toStartOf="@+id/cardTwoView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Card" />

    <TextView
        android:id="@+id/cardThreeTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:padding="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/face_down"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/cardThreeView"
        app:layout_constraintStart_toStartOf="@+id/cardThreeView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Card" />

    <ImageButton
        android:id="@+id/cardOneView"
        android:layout_width="125dp"
        android:layout_height="217dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/face_down"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardOneTextView" />

    <ImageButton
        android:id="@+id/cardTwoView"
        android:layout_width="125dp"
        android:layout_height="217dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/face_down"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/cardThreeView"
        app:layout_constraintStart_toEndOf="@+id/cardOneView"
        app:layout_constraintTop_toBottomOf="@+id/cardTwoTextView" />

    <ImageButton
        android:id="@+id/cardThreeView"
        android:layout_width="125dp"
        android:layout_height="217dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/face_down"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardThreeTextView" />

    <TextView
        android:id="@+id/cardOneRomanTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/cardOneView"
        app:layout_constraintStart_toStartOf="@+id/cardOneView"
        app:layout_constraintTop_toBottomOf="@+id/cardOneView"
        tools:text="IX" />

    <TextView
        android:id="@+id/cardTwoRomanTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/cardTwoView"
        app:layout_constraintStart_toStartOf="@+id/cardTwoView"
        app:layout_constraintTop_toBottomOf="@+id/cardTwoView"
        tools:text="III" />

    <TextView
        android:id="@+id/cardThreeRomanTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@+id/cardThreeView"
        app:layout_constraintStart_toStartOf="@+id/cardThreeView"
        app:layout_constraintTop_toBottomOf="@+id/cardThreeView"
        tools:text="IV" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/cardTwoView">

        <Button
            android:id="@+id/dealButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:focusableInTouchMode="false"
            android:text="@string/deal_cards" />

        <EditText
            android:id="@+id/QuestionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corners"
            android:hint="@string/enter_question"
            android:imeOptions="actionDone|flagForceAscii"
            android:inputType="text|textMultiLine|textNoSuggestions"
            android:padding="5dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="101dp"
        android:layout_height="114dp"
        android:layout_marginTop="228dp"
        android:alpha="0.8"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorOnSecondaryContainer"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardTwoView" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:breakStrategy="simple"
        android:clickable="false"
        android:padding="8dp"
        android:text="@string/click_on_a_card"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/coinsTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Coins: 0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>